--- a/Hospital/Hospital-web/src/main/resources/mensajes_en.properties
+++ b/Hospital/Hospital-web/src/main/resources/mensajes_en.properties
@@ -15,3 +15,17 @@ usuario.username=Username
 usuario.password=Password
 usuario.registrar=ADD
 usuario.cancelar=CLEAN
+usuario.identificacionPaciente = Identificación del paciente
+usuario.editar=EDITAR
+usuario.eliminar=ELIMINAR
+usuario.buscar=BUSCAR
+usuario.darAlta = DAR DE ALTA
+usuario.editarFecha=EDITAR FECHA DE SALIDA
+usuario.nuevaFechaSalida=Nueva fecha de salida
+usuario.fechaSalida=Fecha de salida
+usuario.seleccioneFecha = Seleccione la fecha
+usuario.fecha=Fecha
+usuario.hora = Hora
+usuario.atender = Atender
+instalacion.numero=Número
+instalacion.descripcion=Descripción
