--- a/Hospital/Hospital-web/src/main/resources/mensajes_en.properties
+++ b/Hospital/Hospital-web/src/main/resources/mensajes_en.properties
@@ -15,3 +15,8 @@ usuario.username=Username
 usuario.password=Password
 usuario.registrar=ADD
 usuario.cancelar=CLEAN
+cirugia.fecha=Fecha
+cirugia.QuirofanosDisponibles=QuirofanosDisponibles
+cirugia.TipoCirugia=Tipo de Cirugia
+cirugia.cirugia=Cirugia
+cirugia.anotaciones=Anotaciones
