--- a/Hospital/Hospital-web/src/main/resources/mensajes_en.properties
+++ b/Hospital/Hospital-web/src/main/resources/mensajes_en.properties
@@ -15,3 +15,6 @@ usuario.username=Username
 usuario.password=Password
 usuario.registrar=ADD
 usuario.cancelar=CLEAN
+usuario.usuario=UserName
+usuario.password=Password
+usuario.LogIn=LogIn
